сделал вывод всех пользователей
